# mFVM

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSetup.json  INSTALL  License.txt  README.md  configure.sh  readme.md  readmeDevelopment.md
.github/workflows/: cmake.yml
cmake/modules/: version.cpp.in
doc/: Doxyfile
doc/readthedocs/: conf.py  index.rst  theories_equation.rst
doc/readthedocs/theories/: theories_equation.rst
src/: CMakeLists.txt  example.cpp  main.cpp  ref.bib
src/headers/: BoundaryConditions.h  ControlVolume.h  Discretization.h  DomainManager.h  Example.hpp  InputProcessor.h  Mesh.h  Physics.h  Properties.h  Solver.h  TestProperties.h  version.h
src/sources/: DomainManager.cpp  Example.cpp  InputProcessor.cpp  Mesh.cpp  boundaryConditions.cpp  discretization.cpp  executableSample_1.cpp  physics.cpp  properties.cpp  solver.cpp  testProperties.cpp  version.cpp  write.cpp  write_backup.cpp
test/: CMakeLists.txt  ExampleTests.cpp  PETSCTests.cpp
test/FVM/: testFVM.cpp  testLargePart.cpp  testMesh.cpp  testSolver.cpp  testVtk.cpp
